docs/self-hosting/envoy-header-map.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 443 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["api.theirco.com"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: nectar_api
                  request_headers_to_add:
                  - header: { key: "x-nectarstudio-api-key", value: "%REQ(x-theirco-api-key)%" }
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: nectar_api
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: nectar_api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: 127.0.0.1, port_value: 3001 }
